Checkout Endpoint with Stripe working
